
syntax = "proto3";
package tracdap.api.internal;

option java_package = "org.finos.tracdap.api.internal";
option java_outer_classname = "RuntimeServiceProto";
option java_multiple_files = true;

import "tracdap/metadata/object_id.proto";
import "tracdap/metadata/job.proto";
import "tracdap/metadata/object.proto";
import "tracdap/metadata/tag_update.proto";

import "google/api/annotations.proto";


service TracRuntimeApi {

  rpc listJobs(RuntimeListJobsRequest) returns (RuntimeListJobsResponse) {
    option (google.api.http) = {
      get: "/list-jobs"
    };
  }

  rpc getJobStatus(RuntimeJobInfoRequest) returns (RuntimeJobStatus) {
    option (google.api.http) = {
      get: "/job-status/{jobKey}"
    };
  }

  rpc getJobResult(RuntimeJobInfoRequest) returns (RuntimeJobResult) {
    option (google.api.http) = {
      get: "/job-result/{jobKey}"
    };
  }
}

message RuntimeListJobsRequest {

  optional uint32 limit = 1;
}

message RuntimeListJobsResponse {

  repeated RuntimeJobStatus jobs = 1;
}

message RuntimeJobInfoRequest {

  oneof job {
    metadata.TagSelector jobSelector = 1;
    string jobKey = 2;
  }
}

message RuntimeJobStatus {

  metadata.TagHeader jobId = 1;

  metadata.JobStatusCode statusCode = 2;
  string statusMessage = 3;
  string errorDetail = 4;
}

message RuntimeJobResultAttrs {

  repeated metadata.TagUpdate attrs = 1;
}

message RuntimeJobResult {

  metadata.TagHeader jobId = 1;
  metadata.TagHeader resultId = 2;
  metadata.ResultDefinition result = 3;

  repeated metadata.TagHeader objectIds = 4;
  map<string, metadata.ObjectDefinition> objects = 5;
  map<string, RuntimeJobResultAttrs> attrs = 6;
}
